# sklk-phy-mod

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Changelog.txt  Jenkinsfile  Notice  README.md  build.gradle.kts  common.hpp  modding.hpp  settings.gradle.kts
cmake/Modules/: SklkPhyModConfig.cmake
docker/: Dockerfile  Dockerfile-jenkins  build-and-push.sh  jenkins-build-and-push.sh
docs/doxygen/: AddSklkPhyIncludeDir.cmake  CMakeLists.txt
docs/doxygen/pages/: base_station.dox  main.dox  sklk-pinky.dox
gradle/wrapper/: gradle-wrapper.properties
ref_design/: CMakeLists.txt  Notice  api.hpp  csi_mod.cpp  csi_mod.hpp  loader.cpp  loader.hpp  rpc.cpp  rpc.hpp  schedule_mod.cpp  schedule_mod.hpp  test_loader.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_loader.cpp  test_refplat_one_connection.cpp  test_refplat_two_connections.cpp
tests/ndjsons/: rrh_captured_06_11_ch0.ndjson  rrh_captured_06_11_ch1.ndjson  rrh_captured_06_25-12_20_19_ch0.ndjson  rrh_captured_06_25-12_20_19_ch1.ndjson  rrh_captured_06_25-12_28_45_ch0.ndjson  rrh_captured_06_25-12_28_45_ch1.ndjson  rrh_captured_06_25-15_43_22_ch0.ndjson  rrh_captured_06_25-15_43_22_ch1.ndjson  rrh_captured_07_16-12_13_37_ch0.ndjson  rrh_captured_07_16-12_13_37_ch1.ndjson  rrh_captured_07_16-12_21_28_ch0.ndjson  rrh_captured_07_16-12_21_28_ch1.ndjson  rrh_captured_07_16-12_25_26_ch0.ndjson  rrh_captured_07_16-12_25_26_ch1.ndjson  rrh_captured_07_16-12_27_48_ch0.ndjson  rrh_captured_07_16-12_27_48_ch1.ndjson  rrh_captured_07_16-12_29_35_ch0.ndjson  rrh_captured_07_16-12_29_35_ch1.ndjson  rrh_captured_07_16-12_30_44_ch0.ndjson  rrh_captured_07_16-12_30_44_ch1.ndjson  rrh_captured_07_16-12_32_15_ch0.ndjson  rrh_captured_07_16-12_32_15_ch1.ndjson  uaa_900795_upl_1_ch2.ndjson  uaa_900795_upl_1_ch3.ndjson
tests/refplat_test/: CMakeLists.txt  refplat_test.cpp  refplat_test.hpp
tests/util/: CMakeLists.txt  refplat_test.hpp
